# svelte_workshop

./: .gitignore  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
web/: package.json  tsconfig.json
web/src/: app.html
web/src/componenets/: navbar.svelte
web/src/routes/: __layout.svelte  index.svelte
